2008-7-16  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-13.
    * R/bayespolr: fix a bug in gmin


2008-7-16  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-12.
    * R/bayespolr: rep start values to have the same length of coef + zeta


2008-7-15  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-11.
    * R/coefplot: add options add=TRUE and epsilon=.1, 
        so coefplot can plot over the existing plot.

2008-7-10  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-10.
    * man/rescale: fix a typo in the example: full2 -> full
    * R/rescale: fix a bug;

2008-7-9  Andrew Gelman  <gelman@stat.columbia.edu>  
    * R/bayesglm: for gaussian family, dispersion <- var(y)/10000

2008-6-23  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-9.
    * R/se.coef: remove trick to show the coef names
    * R/bayesglm: scaled=TRUE --> * sd(y) / sd(x)

2008-6-23  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-8.
    * R/Bayesglm: Clean up redundant code.


2008-6-5  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-8.
    all the lmer2 class-related methods are now mer-class methods.
    all the mer-class methods are obsolete 
    mcmcsamp is obsolet because it is not working in lme4


2008-6-4  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-7.
    * R/traceplot: add mcmc.list method (previously was mask by traceplot
        generic.

2008-6-4  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-6.
    * R/traceplot:
      1. make it a generic
      2. traceplot.bugs --> S4 method

2008-5-1  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-5.

2008-4-12  Yu-Sung Su     <ys463@columbia.edu>  
    * R/bayesglm.h: 
        1. fix a bug in print for bayesglm.h
        2. add show for bayesglm.h